--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,57 @@
-body { width: 200px; }
-div#result { width: 98%; overflow: auto; }
-div.item { overflow: auto; border-bottom: 2px solid gray; height: auto; cursor: pointer; }
-div.item.request { background: skyblue; }
-div.length { border: 1px solid gray; }
-::-webkit-scrollbar {
-    width: 8px;
-    /* 1px wider than Lion. */
-    /* This is more usable for users trying to click it. */
-    
-    background-color: rgba(0, 0, 0, 0);
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
+body {
+  width: 200px;
 }
+
+div#result {
+  width: 98%;
+  overflow: auto;
+}
+
+div.item {
+  overflow: auto;
+  border-bottom: 2px solid gray;
+  height: auto;
+  cursor: pointer;
+}
+
+div.item.request {
+  background: skyblue;
+}
+
+div.length {
+  border: 1px solid gray;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  /* 1px wider than Lion. */
+  /* This is more usable for users trying to click it. */
+
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+}
+
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
 
 ::-webkit-scrollbar:hover {
-    background-color: rgba(0, 0, 0, 0.09);
+  background-color: rgba(0, 0, 0, 0.09);
 }
+
 /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
 
 ::-webkit-scrollbar-thumb:vertical {
-    /* This is the EXACT color of Mac OS scrollbars. 
-     Yes, I pulled out digital color meter */
-    
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
+  /* This is the EXACT color of Mac OS scrollbars.
+   Yes, I pulled out digital color meter */
+
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
 }
+
 ::-webkit-scrollbar-thumb:vertical:active {
-    background: rgba(0, 0, 0, 0.61);
-    /* Some darker color when you click it */
-    border-radius: 100px;
-    -webkit-border-radius: 100px;
+  background: rgba(0, 0, 0, 0.61);
+  /* Some darker color when you click it */
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
 }
